# til

./: .env  Cargo.toml  README.md
migrations/2018-01-24-022015_create_tils/: down.sql  up.sql
migrations/2018-01-24-034949_add_timestamps_to_create_tils/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
